Replace deprecated new Double